# internal/ambulance_wl/model_appointment.go
@@ -1,0 +1,32 @@
+/*
+ * Appointment Scheduling Api
+ *
+ * Medical Appointment Scheduling System
+ *
+ * API version: 1.0.0
+ * Contact: xpokorny@stuba.sk
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package ambulance_wl
+
+import (
+	"time"
+)
+
+type Appointment struct {
+
+	// Unique identifier of the appointment
+	Id string `json:"id"`
+
+	Patient User `json:"patient"`
+
+	Doctor User `json:"doctor"`
+
+	Location Location `json:"location"`
+
+	// Date and time of the appointment
+	DateTime time.Time `json:"dateTime"`
+
+	CreatedBy User `json:"createdBy"`
+}
