# internal/ambulance_wl/model_location.go
@@ -1,0 +1,23 @@
+/*
+ * Appointment Scheduling Api
+ *
+ * Medical Appointment Scheduling System
+ *
+ * API version: 1.0.0
+ * Contact: xpokorny@stuba.sk
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package ambulance_wl
+
+type Location struct {
+
+	// Unique identifier of the location
+	Id string `json:"id"`
+
+	// Name of the medical facility
+	Name string `json:"name"`
+
+	// Physical address of the location
+	Address string `json:"address"`
+}
