# internal/ambulance_wl/model_user.go
@@ -1,0 +1,23 @@
+/*
+ * Appointment Scheduling Api
+ *
+ * Medical Appointment Scheduling System
+ *
+ * API version: 1.0.0
+ * Contact: xpokorny@stuba.sk
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package ambulance_wl
+
+type User struct {
+
+	// Unique identifier of the user
+	Id string `json:"id"`
+
+	// Full name of the user
+	Name string `json:"name"`
+
+	// Role of the user
+	Role string `json:"role"`
+}
